# sp_ask_dashboard_mobile_app_layout

./: .gitignore  Makefile  README.md  pubspec.yaml  task.todo
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sp_ask_dashboard_mobile_app_layout/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: operator.dart  profile.dart  queue.dart  staff.dart
lib/routes/: routes.dart
lib/screens/: errorPage.dart  example.dart  heux.dart  homepage.dart  operators.dart  operatorsDetails.dart  operatorsOnline.dart  queues.dart  queuesDetails.dart  stats.dart  theame.dart
lib/widgets/: widgets.dart
python_lh3__api_server/: app.py  pyproject.toml
python_lh3__api_server/fla/: app.py
python_lh3__api_server/tests/: test_python_lh3_api_server.py
test/: widget_test.dart
